--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>skin-story-solver</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>SkinMatcher</title>
+    <meta name="description" content="AI 기반 피부 분석 및 화장품 추천 서비스" />
+    <meta name="author" content="SkinMatcher Team" />
     
     <!-- Google Fonts - Pretendard for Korean text -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,14 +13,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="skin-story-solver" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="SkinMatcher" />
+    <meta property="og:description" content="AI 기반 피부 분석 및 화장품 추천 서비스" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@skinmatcher" />
+    <meta name="twitter:image" content="/og-image.png" />
     
     <!-- Naver Map API -->
     <script type="text/javascript" src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpKeyId=5jmvwk2415&submodules=geocoder"></script>
